--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@paypal/paypal-server-sdk": "^0.6.1",
     "@paypal/react-paypal-js": "^8.8.3",
+    "@react-pdf-viewer/core": "^3.12.0",
     "@stripe/stripe-js": "^7.8.0",
     "axios": "^1.11.0",
     "cookie": "^1.0.2",
@@ -19,9 +21,11 @@
     "firebase-functions": "^6.4.0",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
+    "pdfjs-dist": "^3.4.120",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "react-pdf": "^10.1.0",
     "stripe": "^18.4.0"
   },
   "devDependencies": {
@@ -30,9 +34,11 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
-    "tailwindcss": "^4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.13",
     "typescript": "^5"
   }
 }
